🔨 Refactor application structure to improve MVC implementation